<resources>
    <string name="app_name">智能管家</string>
    <string name="Butler">服务管家</string>
    <string name="Wechat">微信精选</string>
    <string name="Girl">美女如云</string>
    <string name="User">个人中心</string>
    <string name="setting">设置</string>

    <!-- TODO: Remove or change this placeholder text
    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="rule_email">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ._&#064;</string>
    <string name="rule_number">0123456789</string>
    <string name="text_now_login">正在登录…</string>
    <string name="website">官网:github.com/cherryhsb</string>
    <string name="check_update">检查更新</string>
    <string name="del">删除</string>
    <string name="query">查询</string>
    <string name="enter_number">请输入号码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="password_again">确认密码</string>
    <string name="password_require">密码必须是6–16位数字、字母或字符的组合</string>
    <string name="change_password">修改密码</string>
    <string name="choose_verify">为了你的账户安全,请选择以下方式进行身份验证</string>
    <string name="password_verify">使用当前密码验证</string>
    <string name="email_verify">使用邮箱验证</string>
    <string name="save">保存</string>
    <string name="express_number">快递号</string>
    <string name="email">邮箱</string>
    <string name="send_email">发送邮件</string>
    <string name="enter">进入</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register">注册</string>
    <string name="look_around">随便看看</string>
    <string name="register_and_login">注册并登录</string>
    <string name="Existing_account">已有账号登录</string>
    <string name="Select_from_album">从相册选取二维码</string>
    <string name="do_not_leave">过程中请勿离开</string>
    <string name="icon">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="describe">简介</string>
    <string name="reset_password">重置密码</string>
    <string name="take_picture">拍照</string>
    <string name="album">图库</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="smart">智能</string>
    <string name="strong">强大</string>
    <string name="concise">简洁</string>
    <string name="login_account">点击登录账号</string>
    <string name="query_express">物流查询</string>
    <string name="query_attribution">归属地查询</string>
    <string name="scan_QRcode">二维码扫描</string>
    <string name="my_location">我的位置</string>
    <string name="SMS_Coming">来短信了</string>
    <string name="reply">回复</string>
    <string name="robot_speech">机器人语音</string>
    <string name="robot_speech_hint">开启后智能管家语音播报</string>
    <string name="SMS_alerts">短信提醒</string>
    <string name="SMS_alerts_hint">开启后收到短信弹窗提醒</string>
    <string name="about_software">关于软件</string>
    <string name="log_out">退出登录</string>
    <string name="user_info">用户信息</string>
    <string name="retrieve_password">找回密码</string>
    <string name="QR_card">二维码名片</string>
    <string name="version_update">版本更新</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sure">确定</string>
    <string name="update_user_information_failed">更新用户信息失败:</string>
    <string name="failure">失败</string>
    <string name="skip">跳过</string>
    <string name="app_name_string">应用名:</string>
    <string name="version_code">版本号:</string>
    <string name="update">更新</string>
    <string name="new_version">有新版本啦!</string>
    <string name="is_latest_version">当前是最新版本</string>
    <string name="unable_connect_server">无法连接服务器</string>
    <string name="unknown">未知</string>
    <string name="password_changed_successfully">密码修改成功，可以用新密码进行登录啦</string>
    <string name="password_rule">密码必须是6–16位的</string>
    <string name="two_passwords_not_match">两次输入密码不一致</string>
    <string name="no_express">没有查询到此快递</string>
    <string name="login_successful">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="registered_successfully">注册成功</string>
    <string name="registered_failed">注册失败</string>
    <string name="analytical_results">解析结果:</string>
    <string name="parse_failure">解析二维码失败</string>
    <string name="never_prompt">不再提示</string>
    <string name="hint">提示</string>
    <string name="manual_authorization">应用需要权限，请您手动授予权限</string>
    <string name="permissions_allowed">所有权限都允许</string>
    <string name="reset_password_success">重置密码请求成功，请到</string>
    <string name="reset_operation">邮箱进行密码重置操作</string>
    <string name="long_press_DEL">长按DEL全部清除</string>
    <string name="attribution">归属地:</string>
    <string name="area_code">区号:</string>
    <string name="postcode">邮编:</string>
    <string name="Xiaomi_SMS_hint">小米手机需手动授权:\n读取短信,通知类短信</string>

    <item type="id" name="tag_iv_girl">
    </item>

</resources>