<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1" />


        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/rule_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_register_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/rule_password"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/rule_email"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_require" />


        <Button
            android:id="@+id/btn_register"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:enabled="false"
            android:background="@drawable/button_bg_green"
            android:text="@string/register_and_login"
            android:textColor="@color/white" />
        <!--去阴影-->
        <!--style="?android:attr/borderlessButtonStyle"-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Existing_account"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="|" />

        <TextView
            android:id="@+id/tv_register_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look_around" />
    </LinearLayout>


</RelativeLayout>