<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">


    <EditText
        android:id="@+id/et_forget_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:digits="@string/rule_email"
        android:hint="@string/email" />


    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0.5"
        android:background="@drawable/button_bg_green"
        android:enabled="false"
        android:text="@string/send_email"
        android:textColor="@color/white" />
    <!--去阴影-->
    <!--style="?android:attr/borderlessButtonStyle"-->


</LinearLayout>