<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:text="@string/choose_verify"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginTop="10dp"
        android:background="@color/gainsboro"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_by_password"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:text="@string/password_verify"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/gainsboro"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/tv_by_email"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:text="@string/email_verify"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:background="@color/gainsboro"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>