<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/version_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>




        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:textSize="26sp"
            android:id="@+id/tv_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />








    <Button
        android:paddingHorizontal="5dp"
        android:id="@+id/btn_update"
        android:background="@drawable/button_bg_green"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/check_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>